Lab11 16/App2/app2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deploy
spec:
  selector:
    matchLabels:
      app: app2
      version: v1
  template:
    metadata:
      labels:
        app: app2
        version: v1
    spec:
      containers:
      - name: app2
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name:  app2-volume
          mountPath:  /usr/share/nginx/html
      volumes:
      - name:  app2-volume
        configMap:
          name: app2-configmap
