Lab11 16/App2/app2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
spec:
  selector:
    app: app2
  ports:
  - name: http-default
    port: 80
