Lab11 16/App2/app2-destinationrules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app2-destinationrules
spec:
  host: app2-svc.default.svc.cluster.local
  subsets:
  - name: app2-v1-subset
    labels:
      app: app2
      version: v1
